added json content

--- a/index.html
+++ b/index.html
@@ -10,33 +10,16 @@
         <header><h1>Adventures of a Junior Developer</h1></header>
         <main>
         <div><article class = "week1">
-            <h2>Week 1</h2>
-            <p>My first week at Nashville Software School was a complete whirlwind. Even though I had been anticipating the start of NSS's six-month bootcamp for months, I learned quickly that I wouldn't know what I was in for until I arrived.</p>
-            <p>The biggest challenge so far? Retraining my brain. Working consistently for hours at a time to learn and apply new concepts is not something my brain has actively been engaged in for quite some time. As a lifelong lover of learning, I came into this program believing I had an edge; I have always thrived in a classroom environment and love the energy that comes from a group of people working through projects/ideas/problems together. Having been mostly self-employed for the past several years, and before that having worked in positions that did not require much active problem-solving, I realized this week that that part of my brain has been turned off, perhaps for years.</p>
-            <p>Retraining my brain to absorb highly technical concepts, then apply those concepts in a concrete way, is a task that has been harder than I anticipated. Even as I'm writing this, I'm noticing that my writing skills have taken quite a hit this past week... is my right brain slowly deactivating to make room for a more activated left brain? Or am I just exhausted? (I imagine both.)</p>
-            <p> One of my major accomplishments this week? I think I finally understand git and gitHub. Is that possible?</p>
-            <h4><i>Created by Kathy on April 8, 2017.</i></h4></article>
+            </article>
 
             <article class = "week2"><h2>Week 2</h2>
-            <p>During the second week... urpis nisl sit ut condimentum, etiam metus suspendisse, pharetra in justo lorem. Non est vivamus ultricies, justo leo sem lacinia tincidunt convallis nonummy, wisi cursus in dictumst nullam, tortor in.</p>
-            <p>Non feugiat semper justo placerat, in semper scelerisque eros ipsum pede, consectetuer rutrum integer praesent conubia eu pellentesque, sed id duis lacinia lectus molestie, cubilia aliquet integer pede nulla. Mattis nam. Est in iaculis in facilisi lorem.</p>
-            <h4><i>Created by Kathy on April 10, 2017.</i></h4></article>
+            </article>
 
             <article class = "week3"><h2>Week 3</h2>
-            <p>The third week...Sodales augue, aliquam laoreet mattis id habitasse ac turpis, vivamus massa eveniet massa.</p>
-            <p>Rutrum venenatis parturient cras ante et fringilla. Blah blah blah blah blah.</p>
-            <h4><i>Created by Kathy on April 14, 2017.</i></h4></article>
+            </article>
 
             <article class = "week4"><h2>Week 4</h2>
-            <p>Week four on est vivamus ultricies, justo leo sem lacinia tincidunt convallis nonummy, wisi cursus in dictumst nullam, tortor in.</p>
-            <p>Non feugiat semper justo placerat, in semper scelerisque eros ipsum pede, consectetuer rutrum integer praesent conubia eu pellentesque, sed id duis lacinia lectus molestie, cubilia aliquet integer pede nulla. Mattis nam.</p>
-            <h4><i>Created by Kathy on May 5, 2017.</i></h4></article>
-
-            <article class = "week5"><h2>Week 5</h2>
-            <p>Week five Pellentesque consequat elit vehicula ac. Ac dolor vestibulum est lacus, magna cum, quis fermentum mattis conubia non.
-            </p>Pede eu urna vitae, eget nec etiam luctus tellus conubia eum, commodo nunc habitant. Elit scelerisque sit dui tellus nunc.</p>
-            <h4><i>Created by Kathy on June 6, 2017.</i></h4></article>
-            </ul>
+            </article>
         </div>
         </main>
         <script src="lib/node_modules/jquery/dist/jquery.js"></script>
