why is this not working

--- a/index.html
+++ b/index.html
@@ -3,30 +3,20 @@
 	<head>
         <title>Diving into Software Development</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="lib/node_modules/bootstrap/dist/css/bootstrap.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <header><h1>Adventures of a Junior Developer</h1></header>
         <main>
-        <div><article class = "week1">
-            </article>
-
-            <article class = "week2"><h2>Week 2</h2>
-            </article>
-
-            <article class = "week3"><h2>Week 3</h2>
-            </article>
-
-            <article class = "week4"><h2>Week 4</h2>
-            </article>
+        <div id="blog-container">
         </div>
         </main>
         <script src="lib/node_modules/jquery/dist/jquery.js"></script>
 		<script src="lib/node_modules/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="lib/node_modules/handlebars/dist/handlebars.min.js"></script>
 		<script src="dist/app.js"></script>
     </body>
-<footer class = "kfooter"><p>&copy; 2017 Kathleen Weisensel</p></footer>
+<footer class="kfooter"><p>&copy; 2017 Kathleen Weisensel</p></footer>
 
 </body>
 </html>
